Update version to 6.2.0; add hooks for PremiumVanish and SuperVanish, fixed custom_gui.yml_example not being copied over.